@@ -27,6 +27,7 @@ source(file, local = FALSE, echo = verbose, print.eval = echo,
        max.deparse.length = 150, width.cutoff = 60L,
        deparseCtrl = "showAttributes",
        chdir = FALSE,
+       catch.aborts = FALSE,
        encoding = getOption("encoding"),
        continue.echo = getOption("continue"),
        skip.echo = 0, keep.source = getOption("keep.source"))
@@ -84,6 +85,8 @@ withAutoprint(exprs, evaluated = FALSE, local = parent.frame(),
   \item{chdir}{logical; if \code{TRUE} and \code{file} is a pathname,
     the \R working directory is temporarily changed to the directory
     containing \code{file} for evaluating.}
+  \item{catch.aborts}{logical indicating that \dQuote{abort}ing errors
+    should be caught.}
   \item{encoding}{character vector.  The encoding(s) to be assumed when
     \code{file} is a character string: see \code{\link{file}}.  A
     possible value is \code{"unknown"} when the encoding is guessed: see
@@ -191,7 +194,7 @@ if(someCond) withAutoprint({
 ## If you want to source() a bunch of files, something like
 ## the following may be useful:
 sourceDir <- function(path, trace = TRUE, ...) {
-    op <- options(); on.exit(options(op)) # to reset after each 
+    op <- options(); on.exit(options(op)) # to reset after each
     for (nm in list.files(path, pattern = "[.][RrSsQq]$")) {
        if(trace) cat(nm,":")
        source(file.path(path, nm), ...)
@@ -208,6 +211,16 @@ stopifnot(identical(x, 1:2), identical(y, x^2))
 withAutoprint({ formals(sourceDir); body(sourceDir) },
               max.deparse.length = 20, verbose = TRUE)
 %% --> tests in  ../../../../tests/eval-etc.R
+
+## Continuing after (catchable) errors:
+tc <- textConnection('1:3
+ 2 + "3"
+ cat(" .. in spite of error: happily continuing! ..\n")
+ 6*7')
+r <- source(tc, catch.aborts = TRUE)
+## Error in 2 + "3" ....
+## .. in spite of error: happily continuing! ..
+stopifnot(identical(r, list(value = 42, visible=TRUE)))
 }
 \keyword{file}
 \keyword{programming}
